[package]
edition = "2021"
license = "MIT"
name    = "rolldown_plugin_deno_loader"
version = "0.1.0"

[lib]
doctest = false

[dependencies]
base64-simd     = { workspace = true }
regex           = { workspace = true }
rolldown_common = { workspace = true }
rolldown_plugin = { workspace = true }
rolldown_utils  = { workspace = true }
rolldown_fs     = { workspace = true, features = ["os"] }
urlencoding     = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
url             = { workspace = true }
import_map      = { version = "*"}